--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python
 python:
   - 2.7
+  - 3.6
 install:
   - python setup.py install
 script:
-  - nosetests zschema
+  - python setup.py test
