TYPO - using to test CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'  # Specify the Python version you want to use
+          python-version: '3.12'  # Specify the Python version you want to us
 
       # Step 3: Install dependencies
       - name: Install dependencies
